<resources>
    <string name="app_name">SafeEntry</string>
    <string name="inicio">Inicio</string>
    <string name="registro">Registro</string>
    <string name="ayuda">Ayuda</string>
    <string name="configuraci_n">Configuración</string>
    <string name="perfil">Perfil</string>
    <string name="configuracion">Configuracion</string>
    <string name="bienvenido">Bienvenido a SafeEntry</string>
    <string name="mis_puertas">Mis Puertas</string>
    <string name="anadir_puerta">Añadir Puerta</string>
    <string name="ayuda_ayuda">Ayuda</string>
    <string name="buscar">Buscar</string>
    <string name="ayuda_config">Ayuda con \'Mi configuración\'</string>
    <string name="llamar_emerg">Llamar a emergencia</string>
    <string name="llamar_ayuda">Llamar a número de ayuda</string>
    <string name="reclamos">Reclamos</string>
    <string name="config">Configuracion</string>
    <string name="estado">Estado : Seguro</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="temas">Temas</string>
    <string name="contrasena_y_seguridad">Contraseña y Seguridad</string>
    <string name="actualizacion">Actualización de la Aplicacion</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="nombre">Nombre: Emilio Espinoza</string>
    <string name="email">Email: emilio1@gmail.com</string>
    <string name="actualizar_datos">Actualizar Datos</string>
    <string name="direcci_n">Dirección</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="registro_registro">Registro</string>
    <string name="puerta_1">Puerta 1</string>
    <string name="n_de_veces_2">N° de veces: 2</string>
    <string name="fecha_1">Fecha: 26/09/2024</string>
    <string name="hora_1">Hora: 05:45 AM</string>
    <string name="fecha_2">Fecha: 28/09/2024</string>
    <string name="hora_2">Hora: 03:55 AM</string>
    <string name="puerta_2">Puerta 2</string>
    <string name="n_de_veces_1">N° de veces: 1</string>
    <string name="fecha_3">Fecha: 24/09/2024</string>
    <string name="hora_3">Hora: 02:34 AM</string>
    <string name="fecha_4">Fecha: 25/09/2024</string>
    <string name="hora_4">Hora: 01:41 AM</string>
    <string name="puerta_3">Puerta 3</string>
    <string name="sin_registro">Sin registro</string>
</resources>